--- a/scss/tienda/_tienda.scss
+++ b/scss/tienda/_tienda.scss
@@ -1,5 +1,4 @@
-/* INICIO PAGINA TIENDA ------------------------------------------------------------------------------- INICIO PAGINA TIENDA */
-
+/* SECTION 1 */
 .sectionTienda1 {
     margin-top: 10px;
     padding: 10px;
@@ -70,9 +69,3 @@
         display: inline-block;
     }
 }
-
-.publicidadNikon {
-    margin-top: 10px;
-}
-
-/* FIN PAGINA TIENDA ------------------------------------------------------------------------------- FIN PAGINA TIENDA */
