modifique pagina contacto scss

--- a/scss/contacto/_contacto.scss
+++ b/scss/contacto/_contacto.scss
@@ -88,7 +88,7 @@
     }
 }
 
-/* INICIO MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES INDEX */
+/* INICIO MEDIAS QUERIES CONTACTO ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES CONTACTO */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
     #grilla5 {
         grid-template-areas: "header"
@@ -109,4 +109,4 @@
         }
     }
 }
-/* FIN MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- FIN MEDIAS QUERIES INDEX */
+/* FIN MEDIAS QUERIES CONTACTO ------------------------------------------------------------------------------- FIN MEDIAS QUERIES CONTACTO */
