--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -721,7 +721,7 @@
   border: 5px solid #FFE100;
 }
 
-/* INICIO MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES INDEX */
+/* INICIO MEDIAS QUERIES CONTACTO ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES CONTACTO */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
   #grilla5 {
     grid-template-areas: "header" "navbar" "principalContacto1" "principalContacto2" "principalContacto3" "publicidadNikon1" "pieDePagina";
@@ -733,7 +733,7 @@
     height: 200px;
   }
 }
-/* FIN MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- FIN MEDIAS QUERIES INDEX */
+/* FIN MEDIAS QUERIES CONTACTO ------------------------------------------------------------------------------- FIN MEDIAS QUERIES CONTACTO */
 /* INICIO MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES INDEX */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
   #grilla {
