se modifico paginas y scss

--- a/scss/contacto/_contacto.scss
+++ b/scss/contacto/_contacto.scss
@@ -31,6 +31,7 @@
         text-align: center;
         background-color: #FD790A;
         border-radius: 5px;
+        text-shadow: 3px 3px 5px #000000;
     }
 }
 
@@ -48,6 +49,7 @@
         font-size: 40px;
         background-color: #FD790A;
         border-radius: 5px;
+        text-shadow: 3px 3px 5px #000000;
     }
 }
 
@@ -68,6 +70,18 @@
         font-size: 40px;
         background-color: #FD790A;
         border-radius: 5px;
+        text-shadow: 3px 3px 5px #000000;
+    }
+
+    fieldset {
+        border: 1px solid #FFFFFF;
+        padding: 5px;
+        margin-top: 10px;
+
+        legend {
+            text-decoration: underline;
+            background-color: #000000;
+        }
     }
 }
 
