--- a/scss/index/_nav.scss
+++ b/scss/index/_nav.scss
@@ -50,6 +50,7 @@
         font-size: 25px;
         font-weight: bolder;
         color: #FFFFFF !important;
+        text-shadow: 3px 3px 5px $shade1;
 
         &:hover {
             background-color: #00315A;
