--- a/scss/sobremi/_sobremi.scss
+++ b/scss/sobremi/_sobremi.scss
@@ -21,7 +21,7 @@
     text-align: center;
     // border: 5px solid #00315A;
     color: #FFFFFF;
-    height: 700px;
+    // height: 700px;
     margin: 10px;
 
     h1 {
