--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,5 +1,15 @@
+// MI PALETA DE COLORES
 $or-color1: #FD790A;
 $wh-color2: #FFFFFF;
 $bl-color3: #00315A;
 $y-color4: #FCA500;
 $b-color5: #000000;
+
+// COLORES
+$shade1: #262626;
+
+// TAMAÑO
+$var100: 100%;
+$var50: 50%;
+$var25: 25%;
+
