--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -57,6 +57,7 @@
   text-transform: uppercase;
   font-size: 80px;
   float: right;
+  text-shadow: 3px 3px 5px #262626;
 }
 
 /* MENU DE NAVEGACION */
@@ -107,6 +108,7 @@
   font-size: 25px;
   font-weight: bolder;
   color: #FFFFFF !important;
+  text-shadow: 3px 3px 5px #262626;
 }
 .navbar .nav-link:hover {
   background-color: #00315A;
@@ -583,7 +585,6 @@
   justify-content: center;
   text-align: center;
   color: #FFFFFF;
-  height: 700px;
   margin: 10px;
 }
 .descripcion h1 {
@@ -671,6 +672,7 @@
   text-align: center;
   background-color: #FD790A;
   border-radius: 5px;
+  text-shadow: 3px 3px 5px #000000;
 }
 
 .principalContacto2 {
@@ -686,6 +688,7 @@
   font-size: 40px;
   background-color: #FD790A;
   border-radius: 5px;
+  text-shadow: 3px 3px 5px #000000;
 }
 
 .principalContacto3 {
@@ -704,6 +707,16 @@
   font-size: 40px;
   background-color: #FD790A;
   border-radius: 5px;
+  text-shadow: 3px 3px 5px #000000;
+}
+.principalContacto3 fieldset {
+  border: 1px solid #FFFFFF;
+  padding: 5px;
+  margin-top: 10px;
+}
+.principalContacto3 fieldset legend {
+  text-decoration: underline;
+  background-color: #000000;
 }
 
 .publicidadNikon1 {
