--- a/scss/index/_header.scss
+++ b/scss/index/_header.scss
@@ -2,7 +2,7 @@
 .header {
     grid-area: header;
     height: 150px;
-    width: 100%;
+    width: $var100;
     background-color: $bl-color3;
     background-image: linear-gradient(to right, $bl-color3, $or-color1);
     padding: 30px;
@@ -19,5 +19,6 @@
         text-transform: uppercase;
         font-size: 80px;
         float: right;
+        text-shadow: 3px 3px 5px $shade1;
     }
 }
