--- a/scss/index/_main1.scss
+++ b/scss/index/_main1.scss
@@ -15,37 +15,17 @@
             background-color: #00315A;
         }
     }
-
+// EXTEND
     .foto2 {
-        padding: 10px;
-        width: 40%;
-        margin: 10px;
-
-        &:hover {
-            border: 3px solid #00315A;
-            background-color: #00315A;
-        }
+        @extend .foto1;
     }
 
     .foto3 {
-        padding: 10px;
-        width: 40%;
-        margin: 10px;
-
-        &:hover {
-            border: 3px solid #00315A;
-            background-color: #00315A;
-        }
+        @extend .foto1;
+        
     }
 
     .foto4 {
-        padding: 10px;
-        width: 40%;
-        margin: 10px;
-
-        &:hover {
-            border: 3px solid #00315A;
-            background-color: #00315A;
-        }
+        @extend .foto1;
     }
 }
